refactor(player): add persistent profile revision